<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".Activities.HomePageActivity">


    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="Setting"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textColorHint="#00FF0000"
        android:textColorLink="#CFBB11"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/monitorApp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewMontorApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="App Usage Permission"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/switchMontorApp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="Switch"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GPS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="GPS Permission"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/switchGPS"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="Switch"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Camera Permission"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/switchcamera"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="Switch"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/applySetting"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="Apply Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>